--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Railway mangement system</string>
+    <string name="app_name">Railway System</string>
+    <string name="hint_code">Code</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="hint_name">Fullname</string>
@@ -13,4 +14,17 @@
     <string name="old_password">Old Password</string>
     <string name="new_password">New Password</string>
     <string name="title_activity_user_account">UserAccount</string>
+    <string name="sign_in"><u>sign up</u></string>
+    <string name="train_types_prompt">Type</string>
+    <string name="open">NavBar</string>
+    <string name="close">NavBar</string>
+    <string-array name="train_types">
+        <item>All</item>
+        <item>Express</item>
+        <item>Normal</item>
+
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
